--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main>
     <section class="section">
-      <h2>DISCO EN FÍSICO</h2>
+      <h2>DISCO EN FÍSICO 0000</h2>
       <div class="product">
         <img src="./multimedia/JACKBOYS2VINYL.jpg" alt="Jackboys 2 Vinilo">
         <p class="product-title">JACKBOYS 2 VINILO</p>
