--- a/index.html
+++ b/index.html
@@ -36,36 +36,96 @@
   </header>
 
   <main>
-    <section class="section">
-      <h2>DISCO EN FÍSICO 0000</h2>
-      <div class="product">
+    <section class="bloque-section">
+      <h2>DISCO EN FÍSICO</h2>
+      <div class="producto">
         <img src="./multimedia/JACKBOYS2VINYL.jpg" alt="Jackboys 2 Vinilo">
-        <p class="product-title">JACKBOYS 2 VINILO</p>
-        <p class="price">$15.99</p>
+        <p class="letra-producto">JACKBOYS 2 VINILO</p>
+        <p class="letra-producto">$15.99</p>
       </div>
 
-      <div class="product-row">
-        <div class="product">
+      <div class="producto-row">
+        <div class="producto">
           <img src="./multimedia/JACKBOYS2CD1.jpg" alt="Jackboys 2 CD DLX 1">
-          <p class="product-title">JACKBOYS 2 CD DLX 1</p>
-          <p class="price">$7.99</p>
+          <p class="letra-producto">JACKBOYS 2 CD DLX 1</p>
+          <p class="letra-producto">$7.99</p>
         </div>
-        <div class="product">
+        <div class="producto">
           <img src="./multimedia/JACKBOYS2CD2.jpg" alt="Jackboys 2 CD DLX 2">
-          <p class="product-title">JACKBOYS 2 CD DLX 2</p>
-          <p class="price">$7.99</p>
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
         </div>
       </div>
     </section>
 
-    <section class="section">
+    <section class="bloque-section">
       <h2>ÁLBUM DIGITAL</h2>
-      <div class="product">
+      <div class="producto">
         <img src="./multimedia/JACKBOYSDG.jpg" alt="Jackboys 2 DG">
-        <p class="product-title">JACKBOYS 2 DG</p>
-        <p class="price">$7.99</p>
+        <p class="letra-producto">JACKBOYS 2 DG</p>
+        <p class="letra-producto">$7.99</p>
       </div>
+    </section>
+
+    <section class="bloque-section">
+      <h2>INDUMENTARIA</h2>
+      <div class="producto-row">
+        <div class="producto">
+          <img src="./multimedia/ropa1.jpg" alt="Jackboys 2 CD DLX 1">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 1</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+        <div class="producto">
+          <img src="./multimedia/ropa2.jpg" alt="Jackboys 2 CD DLX 2">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+        <div class="producto">
+          <img src="./multimedia/ropa3.jpg" alt="Jackboys 2 CD DLX 2">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+        <div class="producto">
+          <img src="./multimedia/ropa4.jpg" alt="Jackboys 2 CD DLX 2">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+        <div class="producto">
+          <img src="./multimedia/ropa5.jpg" alt="Jackboys 2 CD DLX 2">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+        <div class="producto">
+          <img src="./multimedia/ropa6.jpg" alt="Jackboys 2 CD DLX 2">
+          <p class="letra-producto">JACKBOYS 2 CD DLX 2</p>
+          <p class="letra-producto">$7.99</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="musica-section">
+      <h1>TRAVIS SCOTT</h1>
+      <div class="link-musica">
+        <a href="https://www.youtube.com/channel/UCtxdfwb9wfkoGocVUAJ-Bmg"><img src="./multimedia/youtube-6.svg" alt="Youtube"></a>
+        <a href="https://open.spotify.com/artist/0Y5tJX1MQlPlqiwlOH1tJY"><img src="./multimedia/spotify-logo.svg" alt="Spotify"></a>
+        <a href="https://music.apple.com/bt/artist/travis-scott/549236696"><img src="./multimedia/apple-music-3.svg" alt="Apple"></a>
+      </div>
+      <div class="link-album">
+        <div class="producto">
+          <a href="https://open.spotify.com/album/4PWBTB6NYSKQwfo79I3prg"><img src="./multimedia/travis_scott_rodeo-portada.jpg" alt="rodeo"></a>
+          <p>rodeo</p>
+        </div>
+        <div class="producto">
+          <a href="https://open.spotify.com/album/1Sf8GsXG32t0jNrX11xqWx"><img src="./multimedia/travis_scott_jackboys-portada.jpg" alt="jackboys"></a>
+          <p>jackboys</p>
+        </div>
+      </div>  
     </section>
   </main>
+  <footer>
+    <a href="#">contacto</a>
+    <a href="#">términos</a>
+    <a href="#">copyright</a>
+  </footer>
 </body>
 </html>
