--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
       </div>
       <div class="link-album">
         <div class="producto">
-          <a href="https://open.spotify.com/album/4PWBTB6NYSKQwfo79I3prg"><img src="./multimedia/travis_scott_rodeo-portada.jpg" alt="rodeo"></a>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4PWBTB6NYSKQwfo79I3prg?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           <p>rodeo</p>
         </div>
         <div class="producto">
-          <a href="https://open.spotify.com/album/1Sf8GsXG32t0jNrX11xqWx"><img src="./multimedia/travis_scott_jackboys-portada.jpg" alt="jackboys"></a>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1Sf8GsXG32t0jNrX11xqWx?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           <p>jackboys</p>
         </div>
       </div>  
